--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -67,3 +67,22 @@
       &-description
         min-width: 350px
         max-width: 400px
+  .other-articles
+    &__cards
+      max-width: 455px
+    &__card
+      &_small
+        max-width: 220px
+  .photo-slider
+    max-width: 480px
+    &__wrapper
+      right: -10px
+      left: -10px
+    &__pagination
+      left: 190px !important
+  .footer
+    &-grid
+      &__wrapper
+        width: 165px
+        &:last-child
+          max-width: 135px
