--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -68,3 +68,36 @@
         right: 30px
     &__post
       flex-basis: 100%
+  .photo-slider
+    height: 440px
+    &__title
+      font-size: 26px
+      line-height: 30px
+    &__wrapper
+      padding: 15px
+    &__text
+      margin-top: 15px
+  .footer
+    &__title
+      line-height: 30px
+      font-size: 26px
+    &__form
+      height: 200px
+      flex-wrap: wrap
+      justify-content: center
+      align-content: space-between
+    &-links
+      flex-direction: column
+      justify-content: center
+      &__ul
+        margin-left: 0
+        margin-top: 15px
+        flex-wrap: wrap
+        justify-content: center
+        min-width: 294px
+        max-width: 100%
+      &__item
+        margin-right: 10px
+        margin-bottom: 15px
+        &:nth-last-child(-n+2)
+          margin-bottom: 0
