--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -171,3 +171,45 @@
         width: 336px
         height: 195px
         margin-bottom: 15px
+  .other-articles
+    &__card
+      &_small
+        max-width: 576px
+        margin-bottom: 30px
+        &:last-child
+          margin-bottom: 0
+  .footer
+    &-grid
+      grid-template-columns: 1fr
+      &__wrapper
+        width: 145px
+        &:last-child
+          width: 145px
+          max-width: 145px
+        &:nth-child(2)
+          width: 145px
+        &:nth-last-child(2)
+          width: 145px
+      &__title
+        margin-top: 15px
+      &__item
+        &:last-child
+          margin-bottom: 15px
+    &__title
+      font-size: 30px
+    &__input
+      width: 210px
+    &-links
+      flex-wrap: wrap
+      &__ul
+        margin-left: auto
+        margin-right: 0
+      &__social
+        margin: auto
+        margin-top: 30px
+    &-bottom
+      flex-wrap: wrap
+      justify-content: center
+      &__description
+        text-align: center
+        margin-bottom: 15px
