--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -52,3 +52,13 @@ img
 a
   &:hover
     text-decoration-line: underline
+#email-error
+  position: absolute
+  left: 0
+  top: 45px
+  color: red
+  font-family: 'Lato-Black', sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 14px
+  line-height: 20px
