--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -19,10 +19,13 @@
     line-height: 50px
     color: $title-color-dark
   &__form
+    position: relative
     padding-bottom: 70px
+    width: 460px
     display: flex
     align-items: center
   &__input
+    position: relative
     margin-right: 10px
     padding: 10px 15px
     width: 314px
