--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import 'sections/news'
 @import 'sections/other-articles'
 @import 'sections/footer'
+@import 'sections/thanks'
 @import 'media/media-1200'
 @import 'media/media-992'
 @import 'media/media-767'
