--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,7 @@
 @import 'settings'
 @import 'sections/header'
 @import 'sections/main-info'
+@import 'sections/main-display'
 @import 'sections/articles'
 @import 'sections/promo'
 @import 'sections/news'
