--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -1,6 +1,8 @@
 .header
   background-color: $dark
   padding: 15px 0
+  &_whtie
+    background-color: #fff
   &__wrapper
     margin-right: 30px
   &-nav
@@ -28,6 +30,8 @@
     &__link
       color: $text-color-light
       text-decoration: none
+      &_grey
+        color: $numbers-color
     &__search
       position: relative
       width: 263px
@@ -48,6 +52,8 @@
         font-weight: normal
         font-size: 14px
         line-height: 20px
+      &_light
+        background-color: #F5F5F5
     &__button
       position: absolute
       display: flex
@@ -61,7 +67,9 @@
       border-radius: 10px
       background-color: #656B70
       outline: none
-    &__benu
+      &_light
+        background-color: #F5F5F5
+    &__menu
       &-button
         display: none
 .menu-button
