--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -44,6 +44,8 @@
     border: none
     cursor: pointer
     outline: none
+    &:hover
+      background-color: #3387FF
     &-text
       font-family: 'Lato-Black', sans-serif
       font-style: normal
