--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'sections/main-info'
 @import 'sections/main-display'
 @import 'sections/articles'
+@import 'sections/article'
 @import 'sections/promo'
 @import 'sections/news'
 @import 'sections/other-articles'
