--- a/sass/sections/_other-articles.sass
+++ b/sass/sections/_other-articles.sass
@@ -165,6 +165,8 @@
     border: none
     cursor: pointer
     outline: none
+    &:hover
+      background-color: #3387FF
     &-text
       margin-right: 8px
       max-width: 120px
