--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -86,3 +86,7 @@
         width: 165px
         &:last-child
           max-width: 135px
+  .main-display
+    &__container
+      max-width: 750px
+      
