--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -7,7 +7,7 @@
     top: 0
     left: 0
     right: 0
-    z-index: 99 
+    z-index: 101 
     &__logo
       width: 120px
     &__wrapper
@@ -219,3 +219,16 @@
       &__description
         text-align: center
         margin-bottom: 15px
+  .main-display
+    padding-top: 105px
+    &__container
+      max-width: 550px
+      width: 90%
+    &__flag
+      left: 90%
+    &__title
+      font-size: 30px
+      line-height: 30px
+    &__description
+      font-size: 16px
+      line-height: 20px
