--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -165,3 +165,11 @@
         max-width: 628px
       &__copy
         font-size: 12px
+  .main-display
+    &__container
+      max-width: 650px
+    &__title
+      font-size: 42px
+    &__flag
+      left: 92%
+      
