--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -103,3 +103,20 @@
           margin-bottom: 0
   #email-error
     left: 10px
+  .main-display
+    &__top
+      flex-direction: column
+    &__subtitle
+      margin-bottom: 20px
+    &__title
+      font-size: 24px
+    &__flag
+      top: 260px
+      left: 50%
+      transform: translateX(-50%)
+    &__links
+      flex-direction: column
+      align-items: center
+    &__link
+      margin-bottom: 15px
+      margin-right: 0
