--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -89,4 +89,8 @@
   .main-display
     &__container
       max-width: 750px
-      
+  .article
+    &-slider
+      &__bottom
+        &-text
+          width: 715px
