--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -120,3 +120,37 @@
     &__link
       margin-bottom: 15px
       margin-right: 0
+  .article
+    &__wrapper
+      &_first
+        height: 209px
+    &-slider
+      height: 325px
+      &__item
+        height: 200px
+      &__bottom
+        &-text
+          padding-right: 10px
+          padding-left: 10px
+        &-profile
+          padding-left: 10px
+          padding-right: 11px
+      &__button
+        top: 22.5%
+        &_prev
+          background-size: 30px
+          left: 0
+        &_next
+          background-size: 30px
+          right: 0
+    &__buttons
+      flex-direction: column
+      align-items: center
+    &__repost
+      &-button
+        margin-bottom: 15px
+      &-title
+        text-align: center
+    &__tags
+      &-button
+        margin-bottom: 10px
