--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -232,3 +232,34 @@
     &__description
       font-size: 16px
       line-height: 20px
+  .article
+    &-container
+      max-width: 576px
+      width: 92%
+    &__wrapper
+      &_first
+        height: 115px
+        margin-left: 5px
+    &-slider
+      height: 430px
+      &__item
+        height: 300px
+      &__bottom
+        &-profile
+          padding-left: 50px
+          padding-right: 48px
+          flex-direction: column
+          text-align: center
+        &-img
+          margin-right: 0
+        &-text
+          padding-top: 20px
+          width: 360px
+      &__button
+        top: 27.5%
+        &_prev
+          background-size: 40px
+          left: 0
+        &_next
+          background-size: 40px
+          right: 0
