--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -172,4 +172,27 @@
       font-size: 42px
     &__flag
       left: 92%
-      
+  .article
+    padding-top: 280px
+    &-container
+      max-width: 700px
+    &-slider
+      height: 400px
+      &__item
+        height: 330px
+      &__bottom
+        &-text
+          padding-top: 10px
+          padding-bottom: 18px
+          width: 462px      
+    &__profile
+      top: -325px
+      right: 50%
+      transform: translateX(50%)
+    &__card
+      position: relative
+      bottom: 0
+      right: 0
+      margin-top: 40px
+      margin-left: auto
+      margin-right: auto
