--- a/sass/sections/_article.sass
+++ b/sass/sections/_article.sass
@@ -251,7 +251,7 @@
         color: #C5E4FC
   &__buttons
     display: flex
-.atricle-container
+.article-container
   max-width: 956px
   margin: auto
 .article-slider
